# modalbcihack

./: .gitignore  README.md
.claude/: settings.local.json
auto research/: CLAUDE.md  INFERENCE.md  README.md  claude_research.py  infer.py  loop.py  modal_app.py  pipeline.py  prepare.py  program.md  requirements.txt  train.py  train_final.py
auto research/runs/: best_pipeline_config.json  blink_prod_predictions.csv  final_model.json  research_log.jsonl
auto research/strategies/: adaptive_envelope.json  bandpass_energy.json  cusum_changepoint.json  derivative_transient.json  (+7 more)
bci-sdk/: .gitignore  AlchemiacController.py  AlchemiacGameController.py  pyproject.toml  requirements.txt
bci-sdk/data/: alchemiac_game_eeg_2026-05-30_17-03-05.csv  alchemiac_game_eeg_2026-05-30_17-50-42.csv  alchemiac_game_eeg_2026-05-30_17-50-56.csv  alchemiac_game_eeg_2026-05-30_17-52-14.csv  alchemiac_game_eeg_2026-05-30_17-54-53.csv  alchemiac_game_eeg_2026-05-30_17-57-48.csv  alchemiac_game_eeg_2026-05-30_17-59-43.csv  alchemiac_game_eeg_2026-05-30_18-01-49.csv  alchemiac_game_eeg_2026-05-30_18-02-49.csv  alchemiac_game_eeg_2026-05-30_18-04-41.csv  alchemiac_game_eeg_2026-05-30_18-05-53.csv  alchemiac_game_eeg_2026-05-30_18-08-01.csv  blink_prod.csv  blink_prod2.csv  left_prod.csv  left_prod2.csv  right_prod2.csv
bci-sdk/proxies/: AlchemiacProxy.py
bci-sdk/utils/: audio.py  game_visualization.py  live_inference.py  visualization.py
example/: AlchemiacController.py  AlchemiacStreamLSL.py  ble_scanner.py
web/: index.html  package-lock.json  package.json  vite.config.js
(+82 files in other folders)
