[project]
name = "bci-sdk"
version = "0.1.0"
description = "Alchemiac BCI SDK"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pyqt5>=5.15.0",
    "pyqt5-sip>=12.13.0",
    "pyqtgraph>=0.13.0",
    "scipy>=1.12.0",
    "sounddevice>=0.4.0",
    "pylsl>=1.16.0",
]
